welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:3: error: not found: value y
    cpt=deuxl(y,cpt)
              ^ZigZag:7: error: not found: value cpt2
    ecritMessage(""+cpt2)
                    ^ZigZag:8: error: not found: value cpt2
    cpt2=cpt2+1
    ^